--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Mako==1.1.0
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
 PyJWT==1.7.1
+PyMySQL==0.9.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
