--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.3.0
+astroid==2.3.3
 blinker==1.4
 Click==7.0
 Flask==1.1.1
@@ -8,17 +9,25 @@ Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 pkg-resources==0.0.0
 PyJWT==1.7.1
+pylint==2.4.4
+pylint-flask==0.6
+pylint-plugin-utils==0.6
 PyMySQL==0.9.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.10
+typed-ast==1.4.0
 Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
