--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.3.0
 astroid==2.3.3
+autopep8==1.4.4
 blinker==1.4
 Click==7.0
 Flask==1.1.1
@@ -16,7 +17,9 @@ lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pep8==1.7.1
 pkg-resources==0.0.0
+pycodestyle==2.5.0
 PyJWT==1.7.1
 pylint==2.4.4
 pylint-flask==0.6
